# fontforge-ot-fixup

./: README.md  setup.cfg
fontforge_otfixup/: __init__.py  __main__.py  aaltFeatureHook.py  config.py  postIsFixedPitchHook.py  smartDropout.py  utils.py
test/: test_smartDropout.py  test_utils.py
