[metadata]
name = fontforge_ot_fixup
version = 0.1.0
author = MihailJP
author_email = mihailjp@gmail.com
description = Fontforge_plugin to fix issues to generated OT font
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-ot-fixup
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforge_otfixup
python_requires = >=3.9
install_requires =
    fonttools

[options.entry_points]
fontforge_plugin =
    OT fixup utility = fontforge_otfixup.__main__
